# really-small-backpack-example

./: .gitignore  LICENSE  README.md  cabal.project
lesson-0-convenience-libraries/: README.md  package.cabal
lesson-0-convenience-libraries/lib/: Bar.hs
lesson0-convenience-libraries/: README.md  package.cabal
lesson0-convenience-libraries/lib/: Lesson0.hs
lesson0-convenience-libraries/lib-foo/: Foo.hs
lesson1-renaming-modules/: README.md  package.cabal
lesson1-renaming-modules/lib/: Lesson1.hs
lesson1-renaming-modules/lib-foo/Foo/: Extra.hs
lesson10-coercing-proofs/: Main.hs  README.md  package.cabal
lesson10-coercing-proofs/lib/: Lesson10.hs
lesson10-coercing-proofs/lib-proofs-coerced/Lesson10/: Proofs.hs
lesson10-coercing-proofs/lib-proofs/Lesson10/: Proofs.hs
lesson10-coercing-proofs/lib/Lesson10/: Proofs.hsig
lesson11-controlling-encapsulation/: README.md  package.cabal
lesson11-controlling-encapsulation/lib-mystery-solved/Lesson11/: Mystery.hs
lesson11-controlling-encapsulation/lib/Lesson11/: Foo.hs  Inspectable.hs  Mystery.hsig  UsesFoo.hs
lesson11-controlling-encapsulation/test/: tests.hs
lesson12-abstracting-type-families/: README.md  package.cabal
lesson12-abstracting-type-families/lib-mystery-solved/Lesson12/: Mystery.hs
lesson12-abstracting-type-families/lib/Lesson12/: Mystery.hsig  User.hs
lesson12-abstracting-type-families/test/: tests.hs
lesson2-signatures/: Main.hs  README.md  package.cabal
lesson2-signatures/impl/Str/: String.hs  Text.hs
lesson2-signatures/lib/: Lesson2.hs  Str.hsig
lesson3-signature-merging/: Main.hs  README.md  package.cabal
lesson3-signature-merging/lib-bar/: Bar.hs  Siggy.hsig
lesson3-signature-merging/lib-foo/: Foo.hs  Siggy.hsig
lesson3-signature-merging/lib-impl/: Siggy.hs
lesson4-signature-thinning/: Main.hs  README.md  package.cabal
lesson4-signature-thinning/lib-bar/: Bar.hs
lesson4-signature-thinning/lib-bar/Bar/: Siggy.hsig
lesson4-signature-thinning/lib-foo/: Foo.hs
lesson4-signature-thinning/lib-foo/Foo/: Siggy.hsig
lesson4-signature-thinning/lib-impl/Bar/: Siggy.hs
lesson4-signature-thinning/lib-impl/Foo/: Siggy.hs
lesson4-signature-thinning/lib-sig/: Siggy.hsig
lesson5-abstract-typeclasses/: Main.hs  README.md  package.cabal
lesson5-abstract-typeclasses/impl/: MappyHash.hs  MappyOrdered.hs
lesson5-abstract-typeclasses/lib/: Lesson5.hs  Mappy.hsig
lesson6-abstracting-monad-stacks/: .gitignore  Main.hs  README.md  package.cabal
lesson6-abstracting-monad-stacks/benchmarks/: benchmarks.hs
lesson6-abstracting-monad-stacks/lib-logic-impl/LogicIndef/: Monad.hs
lesson6-abstracting-monad-stacks/lib-logic-indef/: LogicIndef.hs
lesson6-abstracting-monad-stacks/lib-logic-indef/LogicIndef/: Monad.hsig
lesson6-abstracting-monad-stacks/lib-logic-mtl/: LogicMTL.hs
lesson6-abstracting-monad-stacks/lib-logic-trans/: LogicTrans.hs
lesson7-module-identity/: Main.hs  README.md  package.cabal
lesson7-module-identity/lib-pair-impl/Pair/: Element.hs
lesson7-module-identity/lib-pair-indef/: Pair.hs
lesson7-module-identity/lib-pair-indef/Pair/: Element.hsig
lesson8-transitively-indefinite-packages/: Main.hs  README.md  package.cabal
lesson8-transitively-indefinite-packages/lib-core/: Core.hs
lesson8-transitively-indefinite-packages/lib-core/Core/: SomeSig.hsig
lesson8-transitively-indefinite-packages/lib-impl/Core/: SomeImpl.hs
lesson8-transitively-indefinite-packages/lib-intermediate1/: Intermediate1.hs
lesson8-transitively-indefinite-packages/lib-intermediate1-splices/Intermediate1/: Splices.hs
lesson8-transitively-indefinite-packages/lib-intermediate2/: Intermediate2.hs
lesson9-template-haskell/: Main.hs  README.md  package.cabal
lesson9-template-haskell/lib-core/Core/: TH.hs
lesson9-template-haskell/lib-impl/Core/: SomeImpl.hs
lesson9-template-haskell/lib-intermediate/: Intermediate.hs
