cabal-version: 2.2
name: lesson0-convenience-libraries
version: 1.0.0.0
build-type: Simple

library -- the main library
    hs-source-dirs: lib
    build-depends:
        base,
        foo
    exposed-modules:
        Lesson0
    default-language: Haskell2010

-- this named convenience library is not seen outside the package
library foo
    hs-source-dirs: lib-foo
    build-depends:
        base          >= 4 && < 5
    exposed-modules:
        Foo
    default-language: Haskell2010
