cabal-version: 3.0
name: lesson1-renaming-modules
version: 1.0.0.0
build-type: Simple

library -- the main library
    hs-source-dirs: lib
    build-depends:
        base          >= 4 && < 5,
        foo
    mixins:
        foo (Foo as Bar),
        foo (Foo as Baz)
    exposed-modules:
        Lesson1
    default-language: Haskell2010

-- this named convenience library is not seen outside the package
library foo
    hs-source-dirs: lib-foo
    build-depends:
        base          >= 4 && < 5
    exposed-modules:
        Foo
    default-language: Haskell2010
