cabal-version: 3.0
name: lesson11-controlling-encapsulation
version: 1.0.0.0
build-type: Simple

-- https://vrom911.github.io/blog/common-stanzas
-- https://cabal.readthedocs.io/en/3.4/cabal-package.html#pkg-field-build-depends
common common
    build-depends:
        base          >= 4 && < 5,
    default-language: Haskell2010
    ghc-options: -O2 
    
library 
    import: common
    exposed-modules:  Lesson11.Inspectable,
                      Lesson11.Foo,
                      Lesson11.UsesFoo,
    signatures:       Lesson11.Mystery
    hs-source-dirs:   lib

library mystery-solved
    import: common
    exposed-modules:  Lesson11.Mystery,
    hs-source-dirs:   lib-mystery-solved

test-suite tests
    import: common
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             tests.hs
    build-depends:       
      lesson11-controlling-encapsulation,
      lesson11-controlling-encapsulation:lib-mystery-solved,
      tasty              >= 1.3.1,
      tasty-hunit        >= 0.10.0.2


