cabal-version: 2.2
name: lesson3-signature-merging
version: 1.0.0.0
build-type: Simple

executable lesson3
    main-is: 
        Main.hs
    build-depends:
        base          >= 4 && < 5,
        impl,
        foo,
        bar
    default-language: Haskell2010

library impl
    hs-source-dirs: 
        lib-impl
    exposed-modules:
        Siggy
    build-depends:
        base          >= 4 && < 5
    default-language: Haskell2010

library foo
    hs-source-dirs: 
        lib-foo
    signatures:
        Siggy
    exposed-modules:
        Foo
    build-depends:
        base          >= 4 && < 5
    default-language: Haskell2010

library bar
    hs-source-dirs: 
        lib-bar
    signatures:
        Siggy
    exposed-modules:
        Bar
    build-depends:
        base          >= 4 && < 5
    default-language: Haskell2010

