cabal-version: 3.0
name: lesson5-abstract-typeclasses
version: 1.0.0.0
build-type: Simple

executable lesson5
    main-is: 
        Main.hs
    build-depends:
        base          >= 4 && < 5,
        lesson5-abstract-typeclasses,
        impl-map-ordered,
        impl-map-hash
    mixins:
        lesson5-abstract-typeclasses (Lesson5 as Lesson5Ordered) requires (Mappy as MappyOrdered),
        lesson5-abstract-typeclasses (Lesson5 as Lesson5Hash) requires (Mappy as MappyHash) 
    default-language: Haskell2010

library -- the main library
    hs-source-dirs: lib
    signatures:
        Mappy
    exposed-modules:
        Lesson5
    build-depends:
        base          >= 4 && < 5
    default-language: Haskell2010

library impl-map-ordered
    hs-source-dirs: 
        impl
    exposed-modules:
        MappyOrdered
    build-depends:
        base          >= 4 && < 5,
        containers    >= 0.6
    default-language: Haskell2010

library impl-map-hash
    hs-source-dirs: 
        impl
    exposed-modules:
        MappyHash
    build-depends:
        base          >= 4 && < 5,
        unordered-containers >= 0.2.5,
        hashable
    default-language: Haskell2010

