cabal-version: 3.0
name: lesson6-abstracting-monad-stacks
version: 1.0.0.0
build-type: Simple

-- https://vrom911.github.io/blog/common-stanzas
-- https://cabal.readthedocs.io/en/3.4/cabal-package.html#pkg-field-build-depends
-- https://www.stephendiehl.com/posts/ghc_03.html
common common
    build-depends:
        base          >= 4 && < 5,
        transformers  ^>= 0.5,
        mtl           ^>= 2.2,
    default-language: Haskell2010
    ghc-options: -O2

executable lesson6
    import: common
    main-is: 
        Main.hs
    build-depends:
        lib-logic-mtl,
        lib-logic-trans,
        lib-logic-indef,
        lib-logic-impl,

library lib-logic-mtl
    import: common
    hs-source-dirs: lib-logic-mtl
    exposed-modules:
        LogicMTL

library lib-logic-trans
    import: common
    hs-source-dirs: lib-logic-trans
    exposed-modules:
        LogicTrans

library lib-logic-indef
    import: common
    hs-source-dirs: lib-logic-indef
    signatures:
        LogicIndef.Monad
    exposed-modules:
        LogicIndef

library lib-logic-impl
    import: common
    hs-source-dirs: lib-logic-impl
    exposed-modules:
        LogicIndef.Monad

